gap sidebar fix

--- a/src/styles/scss/components/_contact-sidebar.scss
+++ b/src/styles/scss/components/_contact-sidebar.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
 
   &-wrapper {
-    padding: 80px 150px 0 150px;
+    padding: 80px 120px 0 120px;
   }
 
   .logo {
@@ -121,8 +121,7 @@
 .contact-sidebar_content {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  // margin-top: 40px;
+  gap: 0;
 }
 
 .contact-title {
@@ -210,7 +209,7 @@
 
 @media (max-width: 1675px) {
   .contact-sidebar_content {
-    gap: 30px;
+    gap: 0;
   }
   .contact {
     gap: 30px;
@@ -244,7 +243,7 @@
     font-size: 14px;
   }
   .contact-sidebar_content {
-    gap: 20px;
+    gap: 0;
   }
   .mail-information {
     gap: 5px;
